# speed-tdd

./: LICENSE.md  README.md  pyproject.toml
speed_tdd/: bus.py
tests/: test_bus.py
