[tool.poetry]
name = "speed-tdd"
version = "0.1.0"
description = ""
authors = ["Niko Heikkilä <niko.heikkila@futurice.com>"]
readme = "README.md"
packages = [{include = "speed_tdd"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
black = "^22.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
